# BEHAVIOR-1K

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  all_behavior_activities_1016.txt  setup.ps1  setup.sh
.github/scripts/: cprofile_to_html.py
.github/workflows/: profiling.yml  pull-sheets-bddl.yml  tests.yml
OmniGibson/: setup.py
OmniGibson/omnigibson/: __init__.py  macros.py  omnigibson_5_1_0.kit  omnigibson_5_1_0_vr.kit  simulator.py  transition_rules.py
OmniGibson/tests/: conftest.py  test_ag_states.py  test_behavior_task.py  test_curobo.py  test_data_collection.py  test_examples.py  test_multiple_envs.py  test_object_states.py  test_primitives.py  test_robot_states_flatcache.py  test_robot_teleoperation.py  test_sensors.py  test_snapshots.py  test_symbolic_primitives.py  test_transition_rules.py  utils.py
asset_pipeline/: VERSION  dvc-tmpl.yaml  dvc.yaml  params.yaml  requirements.txt  requirements_3dsmax.txt  upload.sh
asset_pipeline/b1k_pipeline/: category_qa_viewer.py  check_collisions_challenge.py  (+10 more)
docker/: Dockerfile  build_docker.sh
joylo/: README.md  pyproject.toml  setup.py
joylo/gello/robots/: og_robot.py
joylo/gello/robots/sim_robot/: og_sim.py  og_teleop_cfg.py
joylo/gello/utils/: og_teleop_cfg.py  og_teleop_utils.py  qa_utils.py
joylo/scripts/: launch_og.py  replay_data.py  run_joylo.py  run_qa_analysis.py  scan_and_reboot.py
knowledgebase/: build_static_site.py
manual_merged_task_video_pairs/: prompts.txt
task_video_sources_50_clean/: README.md  pairs.csv  pairs.jsonl
tools/: rebuild_clean_task_sources.py
(+1293 files in other folders)
